--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Gustavo Salas</title>
+    <title>Gustavo Rodriguez Salas</title>
     <link href="static/css/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Questrial|Raleway:100, 700" rel="stylesheet">
   </head>
@@ -97,11 +97,6 @@
 				</ul>
 			</div>
 		</section>
-		<select>
-			<div>
-				<h1></h1>
-			</div>
-		</select>
 		<footer class="background-footer">
 			<h5>Gustavo Rodriguez Salas</h5>
 		</footer>
